feat(pantry): 手动3档库存+做菜确认+备菜加采购+采购批量入库后端(V42/V43stock_log/V44)
- pantry 改 ingredient_stock 3档(ENOUGH/LOW/NONE)+stock_log 流水(before/after/ref溯源)
- 删扣减链: deduct/adjust/deductByIngredient/planStockUp/PantryDeductionPlanner/StockClassifier
- 做菜确认: cook-materials 弹窗数据 + cook 带 usedUp/partiallyUsed, 删 cook-now
- 采购: from-prep 备菜一键加采购, purchased 只改勾选, restock/undo-restock 批量入库+撤回恢复档位
- 备菜/菜谱详情: stockLevel 徽标字段
- 单测重写(278绿)